--- a/apps.json
+++ b/apps.json
@@ -6,7 +6,7 @@
       "name": "Run me!",
       "developerName": "Byte",
       "version": "0.1",
-      "downloadURL": "nil",
+      "downloadURL": "https://raw.githubusercontent.com/XG213/DNSHaxx/main/clientexploit.lua",
       "description": "Hi :3",
       "iconID": "0",
       "dateAdded": "iForgor💀",
